[gd_scene load_steps=12 format=3 uid="uid://brx6qaf3kufgd"]

[ext_resource type="Script" uid="uid://ceq1561lc0q5a" path="res://src/main.gd" id="1_trn2v"]
[ext_resource type="PackedScene" uid="uid://dvfq822dbh7an" path="res://Terrain.tscn" id="3_03owx"]
[ext_resource type="Script" uid="uid://cdb0i8smux64j" path="res://src/PlayerBody.gd" id="4_3dxm6"]
[ext_resource type="Script" uid="uid://4gksn70toaim" path="res://src/PlayerVisuals.gd" id="4_03owx"]
[ext_resource type="PackedScene" uid="uid://dajofk7l5rg2m" path="res://characters/ProtagonistWrapper.tscn" id="5_c6i3y"]
[ext_resource type="PackedScene" uid="uid://c06n8t6vi0fuj" path="res://ui/MainUserInterface.tscn" id="6_lgr22"]
[ext_resource type="Script" uid="uid://cynrksxjcdhsa" path="res://src/HUD.gd" id="9_c6i3y"]
[ext_resource type="PackedScene" uid="uid://bd5aj5us85j5a" path="res://scenes/Sun/Sun.tscn" id="9_wkp8b"]
[ext_resource type="Environment" uid="uid://cckdgiqbshflm" path="res://good2-saturday-new_environment.tres" id="10_5vvyt"]
[ext_resource type="PackedScene" uid="uid://u4117ijy8a7f" path="res://stages/Stage1.tscn" id="10_wkp8b"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_lgr22"]
radius = 0.2
height = 1.78

[node name="Main" type="Node"]
script = ExtResource("1_trn2v")

[node name="Terrain" parent="." instance=ExtResource("3_03owx")]

[node name="Game" type="Node3D" parent="."]

[node name="Player" type="Node3D" parent="Game" groups=["player"]]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0)

[node name="PlayerBody" type="CharacterBody3D" parent="Game/Player" groups=["player"]]
unique_name_in_owner = true
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -1, 0.690726)
script = ExtResource("4_3dxm6")

[node name="PlayerVisuals" parent="Game/Player/PlayerBody" instance=ExtResource("5_c6i3y")]
unique_name_in_owner = true
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -0.691219)
script = ExtResource("4_03owx")

[node name="CollisionCapsuleWalk" type="CollisionShape3D" parent="Game/Player/PlayerBody"]
unique_name_in_owner = true
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.89, -0.690726)
shape = SubResource("CapsuleShape3D_lgr22")

[node name="CollisionCapsuleMap" type="CollisionShape3D" parent="Game/Player/PlayerBody"]
unique_name_in_owner = true
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.89, -0.690726)
shape = SubResource("CapsuleShape3D_lgr22")
disabled = true

[node name="Cameras" type="Node3D" parent="Game/Player/PlayerBody"]
unique_name_in_owner = true
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -0.691)

[node name="SholderCam" type="Camera3D" parent="Game/Player/PlayerBody/Cameras"]
unique_name_in_owner = true
transform = Transform3D(-1, 2.38035e-08, -8.41197e-08, 0, 0.962218, 0.27228, 8.74228e-08, 0.27228, -0.962218, 0, 2.5, -3)

[node name="FaceCam" type="Camera3D" parent="Game/Player/PlayerBody/Cameras"]
unique_name_in_owner = true
transform = Transform3D(1, 0, 0, 0, 0.866025, 0.5, 0, -0.5, 0.866025, 0, 2.5, 3)

[node name="FirstPersonCam" type="Camera3D" parent="Game/Player/PlayerBody/Cameras"]
unique_name_in_owner = true
transform = Transform3D(-0.999048, 0.0429566, -0.00757439, 0, 0.173648, 0.984808, 0.0436193, 0.983871, -0.173482, 0.0384029, 1.537, 0.319638)

[node name="HUD" parent="." instance=ExtResource("6_lgr22")]
unique_name_in_owner = true
script = ExtResource("9_c6i3y")

[node name="Stage1" parent="." instance=ExtResource("10_wkp8b")]

[node name="Sun" parent="." instance=ExtResource("9_wkp8b")]
transform = Transform3D(-0.939693, -0.330366, 0.0885214, 0, 0.258819, 0.965926, -0.34202, 0.907673, -0.24321, 0, 0, 0)
hours = 13.0
east_direction = 160.0

[node name="Environment" type="WorldEnvironment" parent="."]
unique_name_in_owner = true
environment = ExtResource("10_5vvyt")

[connection signal="game_ended" from="." to="Game/Player/PlayerBody" method="_on_main_game_ended"]
[connection signal="game_ended" from="." to="Game/Player/PlayerBody/PlayerVisuals" method="_on_main_game_ended"]
[connection signal="game_ended" from="." to="HUD" method="_on_game_ended"]
[connection signal="game_resetted" from="." to="Game/Player/PlayerBody" method="_on_game_resetted"]
[connection signal="game_resetted" from="." to="Game/Player/PlayerBody/PlayerVisuals" method="_on_main_game_resetted"]
[connection signal="game_resetted" from="." to="HUD" method="_on_game_resetted"]
[connection signal="game_started" from="." to="HUD" method="_on_game_started"]
[connection signal="stage_won" from="." to="HUD" method="_on_main_stage_won"]
[connection signal="step_count_updated" from="." to="HUD" method="_on_step_count_updated"]
[connection signal="obstacle_hit" from="Game/Player/PlayerBody" to="." method="_on_player_body_obstacle_hit"]
[connection signal="obstacle_hit" from="Game/Player/PlayerBody" to="HUD" method="_on_player_body_obstacle_hit"]
[connection signal="turn_queued" from="Game/Player/PlayerBody" to="." method="_on_player_body_turn_queued"]
[connection signal="turn_queued" from="Game/Player/PlayerBody" to="HUD" method="_on_player_body_turn_queued"]
[connection signal="walked_distance_updated" from="Game/Player/PlayerBody" to="HUD" method="_on_walked_distance_updated"]
[connection signal="map_toggled" from="HUD" to="Game/Player/PlayerBody" method="_on_hud_map_toggled"]
[connection signal="map_toggled" from="HUD" to="Game/Player/PlayerBody/PlayerVisuals" method="_on_hud_map_toggled"]
[connection signal="turn_left_clicked" from="HUD" to="Game/Player/PlayerBody" method="_on_hud_turn_left_clicked"]
[connection signal="turn_right_clicked" from="HUD" to="Game/Player/PlayerBody" method="_on_hud_turn_right_clicked"]
[connection signal="goal_reached" from="Stage1" to="." method="_on_stage_1_goal_reached"]
[connection signal="goal_reached" from="Stage1" to="Game/Player/PlayerBody" method="_on_stage_1_goal_reached"]
[connection signal="goal_reached" from="Stage1" to="Game/Player/PlayerBody/PlayerVisuals" method="_on_stage_1_goal_reached"]
